[package]
name = "async_generic"
version = "0.1.0"
authors = ["Dylan Reid <dgreid@chromium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
cros_async = { path = "/home/dgreid/src/cros_dev/src/platform/crosvm/cros_async" }
