[package]
name = "program_config"
version = "0.1.0"
authors = ["Dylan Reid <dgreid@chromium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "*"

[lib]
proc-macro = true
