[package]
name = "program_config"
version = "0.1.0"
authors = ["Dylan Reid <dgreid@chromium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "0.6"
proc-macro2 = "*"

[dependencies.syn]
version = "0.15"
features = ["full"]

[lib]
proc-macro = true
